# tr-autonomy-training-visualization-aric-volman

./: observations.md
launch/: visualization-launch.xml
src/your_solution/: CMakeLists.txt  package.xml  setup.py
src/your_solution/calc_error/: calc_error.py
src/your_solution/launch/: visualization-launch.py
src/your_solution/tr_messages/msg/: DetWithImg.msg  FromSTM32.msg  Panel.msg  Panels.msg  Robot.msg  Robots.msg  ToSTM32.msg
src/your_solution/tr_messages/msg/debug/: LightBar.msg  LightBarPair.msg  Pose.msg  RobotDebug.msg  RobotsDebug.msg
src/your_solution/tr_messages/msg/simulation/: RobotGroundTruth.msg  SimGroundTruth.msg  SimTeleopInput.msg
src/your_solution/tr_messages/srv/: ListenSerial.srv  WriteSerial.srv
src/your_solution/your_solution/: tf_broadcaster.py
